# viper_

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: common.h  exception.h  hint.h  literals.h  variable.h  variable_storage.h  viper_.h
source/: literals.cpp  main.cpp  variable.cpp  variable_storage.cpp
